<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".DetailsActivity">

    <include layout="@layout/toolbar_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@android:mipmap/sym_def_app_icon" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/details_tv"
            android:text="@string/demo_name" />

        <TextView
            android:id="@+id/tv_email"
            style="@style/details_tv"
            android:text="@string/demo_email" />

        <TextView
            android:id="@+id/tv_about"
            style="@style/details_tv"
            android:text="@string/demo_about" />

    </LinearLayout>

</RelativeLayout>